// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - FormSelect FormSelect with error renders correctly FormSelect 1`] = `
.c0 {
  margin-bottom: 1rem;
}

.c1 {
  font-style: italic;
  color: #e0151d;
}

<label
  className="c0"
>
  Dummy Label
  <DropDown
    error="dummyError"
    placeholder="Dummy placeHolder"
    type="text"
  />
  <div
    className="c1"
  >
    dummyError
  </div>
</label>
`;

exports[`COMPONENT - FormSelect FormSelect without error renders correctly FormSelect 1`] = `
.c0 {
  margin-bottom: 1rem;
}

<label
  className="c0"
>
  Dummy Label
  <DropDown
    placeholder="Dummy placeHolder"
    type="text"
  />
</label>
`;
